--- a/posts/Hedeco_Lime_One_Light_Meter_First_Impressions.mdwn
+++ b/posts/Hedeco_Lime_One_Light_Meter_First_Impressions.mdwn
@@ -31,3 +31,5 @@ I’ve got it mounted, and whilst it’s obviously an accessory, I think it fits
 
 
 [[!img B62BE123-AF73-4893-BBFE-7A33A53A22E4.jpeg align="" size="" alt=""]]
+
+[[!tag  photography]]
