--- a/posts/The_Fujifilm_XC_50-230mm.mdwn
+++ b/posts/The_Fujifilm_XC_50-230mm.mdwn
@@ -4,7 +4,7 @@ Was messing about in the garden with the kids on a nice sunny day, and thought I
 
 
 
-[[!img XT2C8767.jpg align="" size="" alt=""]]
+[[!img XT2C8767.jpg align="" size="450x" alt=""]]
 
 
 
