--- a/posts/Yashica_Lynx-1000.mdwn
+++ b/posts/Yashica_Lynx-1000.mdwn
@@ -1,4 +1,4 @@
-[[!img 2020-10-06_16.25.31.jpg align="right" size="450x" alt=""]]
+[[!img 2020-10-06_16.25.31.jpg align="" size="" alt=""]]
 
 This was one of the early film cameras I bought. It was pretty cheap, maybe £20, and came with the manual, and the original leather case. Although the case was somewhat broken and not quite my cup of tea.
 
