--- a/posts/Yashica_Lynx-1000.mdwn
+++ b/posts/Yashica_Lynx-1000.mdwn
@@ -11,9 +11,8 @@ It’s a rangefinder camera with a fixed lens, 45mm f/1.8, and a leaf-shutter ca
 
 The camera didn’t advance film, I’d opened it up and watched it so many times. Occasionally it did advance but not often, so it was hard to tell exactly what was wrong. Some googling led me to the [Yashica Guy](http://www.yashica-guy.com/document/lynxfix.html) and [CJs classic cameras](http://www.cjs-classic-cameras.co.uk/), they had lots of info but nothing quite explaining what was wrong for me. So I just emailed them! Cees-Jan (of CJs) replied and asked me some questions and gave me some suggestions to try first. CJ and others would repair it for me but at a much greater expense than the camera, and as it has no sentimental value didn’t seem like a worthwhile thing to do. So I decided to try my hand at classic camera repair…
 
-
-[[!img 2020-09-05_19.14.43.jpg align="" size="450x" alt=""]]
-[[!img 2020-09-12_19.33.57.jpg align="" size="450x" alt=""]]
+[[!img 2020-09-05_19.14.43.jpg align="" size="" alt=""]]
+[[!img 2020-09-12_19.33.57.jpg align="" size="" alt=""]]
 
 Turns out it just needed a good clean. This little metal slug in the wheel should move freely and goes up and down as the film advance mechanism turns to move the sprocket on the advance but not on the return. Some isopropanol and cotton wool and it was moving freely.
 
@@ -21,21 +20,21 @@ Now we’re cooking! Ready to load this up with my first roll of film…some Ilf
 
 
 
-[[!img 2020-09-12_20.54.56.jpg align="" size="500x" alt=""]]
+[[!img 2020-09-12_20.54.56.jpg align="" size="" alt=""]]
 
 I was pretty pleased with the results:
 
 
 
-[[!img R2-02950-0003.JPG align="" size="450x" alt=""]]
-[[!img R2-02950-0032.JPG align="" size="450x" alt=""]]
-[[!img R2-02950-0005.JPG align="" size="450x" alt=""]]
+[[!img R2-02950-0003.JPG align="" size="" alt=""]]
+[[!img R2-02950-0032.JPG align="" size="" alt=""]]
+[[!img R2-02950-0005.JPG align="" size="" alt=""]]
 
 My second roll through it and I was too enthusiastic with the film advance and ripped the film…ugh 36 awarding winning photos gone forever…
 
 
 
-[[!img 2020-09-23_19.32.11.jpg align="" size="450x" alt=""]]
+[[!img 2020-09-23_19.32.11.jpg align="" size="" alt=""]]
 
 For some reason I put the camera to one side and started using the Minolta X-700 and SRT101X, and I end up giving the Yashica to my sister for christmas, together with some XP2. I’m not sure if she uses it and hasn’t offered up any photos, and so I don’t like to ask. It’s always annoying when people ask about presents, so I don’t want to do that.
 
