--- a/posts/Yashica_Lynx-1000.mdwn
+++ b/posts/Yashica_Lynx-1000.mdwn
@@ -6,7 +6,7 @@ It’s a rangefinder camera with a fixed lens, 45mm f/1.8, and a leaf-shutter ca
 
 
 
-[[!img 2020-09-01_14.26.16-1.jpg align="" size="" alt=""]]
+[[!img 2020-09-01_14.26.16-1.jpg align="" size="x350" alt=""]]
 [[!img 2020-09-01_15.47.43.jpg align="" size="" alt=""]]
 
 The camera didn’t advance film, I’d opened it up and watched it so many times. Occasionally it did advance but not often, so it was hard to tell exactly what was wrong. Some googling led me to the [Yashica Guy](http://www.yashica-guy.com/document/lynxfix.html) and [CJs classic cameras](http://www.cjs-classic-cameras.co.uk/), they had lots of info but nothing quite explaining what was wrong for me. So I just emailed them! Cees-Jan (of CJs) replied and asked me some questions and gave me some suggestions to try first. CJ and others would repair it for me but at a much greater expense than the camera, and as it has no sentimental value didn’t seem like a worthwhile thing to do. So I decided to try my hand at classic camera repair…
