--- a/index.mdwn
+++ b/index.mdwn
@@ -15,6 +15,8 @@ Quiet internet person. Likes computers, digital and film photography, and very f
 
 Here's my [[setup]] and a list of [[books|book list]] I've read.
 
+[[Here's some old stuff|old posts]].
+
 
 [[!inline pages="page(./posts/*) and !*/Discussion" show="5" rootpage="posts"]]
 
