--- a/old_posts/managing_personal_finances_with_beancount.mdwn
+++ b/old_posts/managing_personal_finances_with_beancount.mdwn
@@ -1,9 +1,6 @@
-title: Managing my personal finances with beancount
-date: 2016-02-27
-category: Software
-tags: python, finance, web
-summary: Explaining my setup with beancount, fava, and pythonanywhere
-toc_run: true
+**Originally from 2016**
+
+[!toc]
 
 *My version of getting started with beancount.*
 
