--- a/posts/The_Fujifilm_XC_50-230mm.mdwn
+++ b/posts/The_Fujifilm_XC_50-230mm.mdwn
@@ -9,3 +9,5 @@ Was messing about in the garden with the kids on a nice sunny day, and thought I
 
 
 [[!img XT2C8774.jpg align="" size="500x" alt=""]]
+
+[[!tag  photography]]
