--- a/posts/Yashica_Lynx-1000.mdwn
+++ b/posts/Yashica_Lynx-1000.mdwn
@@ -39,3 +39,6 @@ My second roll through it and I was too enthusiastic with the film advance and r
 For some reason I put the camera to one side and started using the Minolta X-700 and SRT101X, and I end up giving the Yashica to my sister for christmas, together with some XP2. I’m not sure if she uses it and hasn’t offered up any photos, and so I don’t like to ask. It’s always annoying when people ask about presents, so I don’t want to do that.
 
 I do regret giving it away now. I did try and buy another but it didn’t work, the rangefinder was broken, so I sold it on again, and then didn’t bother looking. For £20 it took great photos and when I look at the Leica I ask myself what was I thinking. The form factor isn’t nearly as nice as the Leica and the rangefinder patch was much fainter, but for a occasional film shooter I’d definetly recommend it. No doubt the year that’s past since I bought it the prices have gone up 10 fold.
+
+
+[[!tag  photography]]
