--- a/archives.mdwn
+++ b/archives.mdwn
@@ -1,3 +1,5 @@
+### [[All Posts|posts]]
+
 [[!if test="archives/*" then="""
 Browse through blog archives by year:
 [[!map pages="./archives/* and !./archives/*/* and !*/Discussion"]]
